--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
-<html class="no-js" lang="en" dir="">
+<html class="no-js" lang="en" dir="rtl">
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
@@ -558,7 +558,7 @@
 						</div>
 					</div>
 					<div class="timeline-nav-wrapper">
-						<div class="row justify-content-end">
+						<div class="row justify-content-sm-end justify-content-center ">
 							<div class="col-8 ">
 								<div class="timeline-nav">
 									<div class="nav-item">
